Agrego de footer a edit

--- a/public/edit.html
+++ b/public/edit.html
@@ -35,5 +35,10 @@
             <button type="submit" class="btn btn-pink">Save Note</button>
         </form>
     </div>
+
+    <footer>
+        <p>&copy; 2024 My Notes 🤍By Susan Hidalgo 🤍</p>
+    </footer>
+    
 </body>
 </html>
